--- a/app/src/main/res/layout/activity_party.xml
+++ b/app/src/main/res/layout/activity_party.xml
@@ -16,8 +16,9 @@
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/example_party_image"
+            android:scaleType="center"
+            android:background="@color/stroke_color"
+            android:src="@drawable/camera"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,6 +27,7 @@
             android:id="@+id/btnRe"
             android:layout_width="45dp"
             android:layout_height="45dp"
+            android:visibility="gone"
             android:background="@drawable/background_round_button"
             android:src="@drawable/pencil"
             android:layout_marginTop="20dp"
@@ -67,41 +69,51 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
-                android:orientation="horizontal"
-                style="@style/text_medium_16_with_background_style"
-                android:background="@drawable/background_text">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/user_name"
-                    style="@style/text_medium_16_style"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Эйфория"
-                    android:textColor="@color/main_text_color" />
+                    android:orientation="horizontal"
+                    style="@style/text_medium_16_with_background_style"
+                    android:background="@drawable/background_text">
 
-                <ImageView
-                    android:id="@+id/verify"
-                    android:layout_width="11.7dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginEnd="10dp"
-                    android:src="@drawable/tick" />
+                    <TextView
+                        android:id="@+id/user_name"
+                        style="@style/text_medium_16_style"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Эйфория"
+                        android:textColor="@color/main_text_color" />
+
+                    <ImageView
+                        android:id="@+id/verify"
+                        android:layout_width="11.7dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="4dp"
+                        android:src="@drawable/tick" />
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/age"
-                    style="@style/text_medium_16_style"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="5dp"
                     android:text="+14"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    style="@style/text_medium_12_with_background_style"
+                    android:background="@drawable/background_text"
                     android:textColor="@color/main_text_color" />
 
             </LinearLayout>
 
         </LinearLayout>
 
-
         <ImageButton
+            android:id="@+id/favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
@@ -119,53 +131,81 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image" >
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginHorizontal="25dp"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="20dp">
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
+                <Button
+                    android:id="@+id/btnBuy"
+                    style="@style/button_main_style_small"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/calendar"
+                    android:background="@drawable/button_main_color_selector"
+                    android:text="Проход от 100 р"
+                    android:layout_marginBottom="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/date"
-                    style="@style/text_medium_16_style"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_marginStart="5dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="14dp"
-                    android:text="7 апреля, воскресенье, 19:00"
-                    android:textColor="@color/main_text_color"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-                    app:layout_constraintStart_toEndOf="@+id/imageView2"
-                    app:layout_constraintTop_toTopOf="@+id/imageView2" />
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/calendar"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/btnBuy" />
+
+                    <TextView
+                        android:id="@+id/date"
+                        style="@style/text_medium_16_style"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="14dp"
+                        android:text="7 апреля, воскресенье, 19:00"
+                        android:textColor="@color/main_text_color"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                        app:layout_constraintStart_toEndOf="@+id/imageView2"
+                        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:src="@drawable/location"
-                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
-                    app:layout_constraintStart_toStartOf="@+id/imageView2"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+                    android:layout_marginStart="5dp"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/place"
-                    style="@style/text_medium_16_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="14dp"
-                    android:text="Омск, р-н Центральный, Ангар"
-                    android:textColor="@color/main_text_color"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-                    app:layout_constraintStart_toEndOf="@+id/imageView3"
-                    app:layout_constraintTop_toTopOf="@+id/imageView3" />
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/location"
+                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+                        app:layout_constraintStart_toStartOf="@+id/imageView2"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+                    <TextView
+                        android:id="@+id/place"
+                        style="@style/text_medium_16_style"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="14dp"
+                        android:text="Омск, р-н Центральный, Ангар"
+                        android:textColor="@color/main_text_color"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+                        app:layout_constraintStart_toEndOf="@+id/imageView3"
+                        app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/textview7"
@@ -173,24 +213,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginStart="5dp"
                     android:text="О событии"
                     android:textColor="@color/main_text_color"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
                 <TextView
-                    android:id="@+id/textview8"
+                    android:id="@+id/description"
                     style="@style/text_medium_16_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp"
                     android:text="Главный календарный праздник, наступающий в момент перехода с последнего дня текущего года в первый день следующего года.
 Отмечается многими государствами и их гражданами в соответствии с принятыми традициями."
                     android:textColor="@color/main_text_color"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/textview7" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
         </ScrollView>
 
@@ -204,6 +246,15 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/back_arrow"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
