--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -63,7 +63,7 @@
         android:drawableStart="@drawable/location_main_text_color"
         android:drawablePadding="7dp"
         android:text="Россия"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:textColor="@color/main_text_color"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -74,15 +74,14 @@
         style="@style/image_button_main_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
         android:background="@null"
         android:drawableStart="@drawable/filter"
         android:drawablePadding="7dp"
         android:text="Фильтры"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="20dp"
         android:textColor="@color/main_text_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="@+id/button_place" />
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -90,7 +89,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="15dp"
+        android:layout_marginHorizontal="5dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
