--- a/app/src/main/res/layout/main_recycler_view_item.xml
+++ b/app/src/main/res/layout/main_recycler_view_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
@@ -13,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:src="@drawable/camera"
-        android:padding="30dp"
+        android:background="@color/stroke_color"
+        android:scaleType="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,8 +43,9 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
         android:layout_marginVertical="10dp"
         android:layout_marginStart="10dp"
         android:orientation="vertical"
@@ -55,7 +56,7 @@
             android:id="@+id/name"
             android:textColor="@color/main_text_color"
             style="@style/text_bold_16_style"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
             android:text="Новый год" />
@@ -95,9 +96,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
@@ -108,6 +109,7 @@
             style="@style/text_medium_12_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:text="Ангар"
             android:textColor="@color/hint_color" />
 
