--- a/app/src/main/res/layout/users_party_item.xml
+++ b/app/src/main/res/layout/users_party_item.xml
@@ -3,15 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:id="@+id/background"
+    android:layout_marginVertical="5dp"
+    android:layout_marginHorizontal="10dp"
+    android:id="@+id/content"
     android:background="@drawable/button_secondary_color_selector">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/icon"
+        android:src="@drawable/camera"
+        android:scaleType="center"
+        android:background="@color/stroke_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
