--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -128,8 +128,16 @@
     </style>
 
     <style name="text_medium_16_with_background_style">
-        <item name="fontFamily">@font/rubik_bold</item>
+        <item name="fontFamily">@font/rubik_medium</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:paddingVertical">4dp</item>
+        <item name="android:paddingHorizontal">4dp</item>
+    </style>
+
+    <style name="text_medium_12_with_background_style">
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="android:textSize">12sp</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:paddingVertical">4dp</item>
         <item name="android:paddingHorizontal">4dp</item>
@@ -145,7 +153,7 @@
         <item name="fontFamily">@font/rubik_bold</item>
         <item name="android:textSize">30sp</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:paddingVertical">7dp</item>
+        <item name="android:paddingVertical">4dp</item>
         <item name="android:paddingHorizontal">4dp</item>
     </style>
 
