Реализация фрагментов подписчиков и подписок

--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FollowersFragment">
+    tools:context=".Followers.FollowersFragment">
 
     <ImageView
         android:id="@+id/imageView"
@@ -73,6 +73,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/content" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
