--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -103,6 +103,18 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="button_main_style_12_small" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:minHeight">0dp</item>
+        <item name="android:width">110dp</item>
+        <item name="android:paddingVertical">6dp</item>
+        <item name="android:paddingHorizontal">6dp</item>
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="search_view" parent="Widget.AppCompat.SearchView">
         <item name="android:fontFamily">@font/rubik_medium</item>
         <item name="android:editTextColor">@color/secondary_text_color</item>
