Оптимизация кода FollowersAdapter

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -82,7 +82,8 @@
                 android:layout_height="wrap_content"
                 app:boxBackgroundMode="outline"
                 app:counterMaxLength="15"
-                app:prefixText="/@"
+                app:prefixText="@"
+                app:prefixTextAppearance="@style/text_medium_16_style"
                 app:counterOverflowTextAppearance="@style/helper_text_medium_12_style_over"
                 app:counterTextAppearance="@style/helper_text_medium_12_style"
                 app:helperTextTextAppearance="@style/helper_text_medium_12_style_over"
