--- a/app/src/main/res/layout/fragment_followers_page.xml
+++ b/app/src/main/res/layout/fragment_followers_page.xml
@@ -21,6 +21,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
