--- a/app/src/main/res/layout/main_recycler_view_item.xml
+++ b/app/src/main/res/layout/main_recycler_view_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:id="@+id/content"
     android:background="@drawable/button_secondary_color_selector"
     android:paddingBottom="10dp">
 
@@ -62,6 +63,7 @@
             android:text="Новый год" />
 
         <LinearLayout
+            android:id="@+id/userInfoContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
