--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:padding="20dp"
-    tools:context=".FilterActivity">
+    tools:context=".Main.FilterActivity">
 
     <ImageButton
         android:id="@+id/btnGoBack"
