--- a/app/src/main/res/layout/followers_item.xml
+++ b/app/src/main/res/layout/followers_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/image"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="5dp"
@@ -26,8 +26,8 @@
         android:layout_marginTop="5dp"
         android:text="Эйфория"
         android:textColor="@color/main_text_color"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+        app:layout_constraintStart_toEndOf="@+id/image"
+        app:layout_constraintTop_toTopOf="@+id/image" />
 
     <ImageView
         android:id="@+id/verify"
@@ -47,9 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:text="232 подписчиков"
-        android:visibility="invisible"
         android:textColor="@color/secondary_text_color"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintBottom_toBottomOf="@+id/image"
         app:layout_constraintStart_toStartOf="@+id/name" />
 
     <Button
@@ -59,7 +58,6 @@
         android:layout_height="wrap_content"
         android:background="@drawable/button_main_color_selector"
         android:text="Отписаться"
-        android:visibility="invisible"
         android:layout_marginEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
