--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingTop="20dp"
     android:background="@color/background"
-    tools:context=".MainFragment">
+    tools:context=".Main.MainFragment">
 
     <ImageView
         android:id="@+id/imageView"
