--- a/app/src/main/res/layout/fragment_actual_party.xml
+++ b/app/src/main/res/layout/fragment_actual_party.xml
@@ -6,18 +6,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Profile.ActualPartyFragment">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        tools:listitem="@layout/users_party_item"/>
+        tools:listitem="@layout/item_current_user_party"/>
 
     <TextView
         android:id="@+id/textView"
