--- a/app/src/main/res/layout/fragment_followers_page.xml
+++ b/app/src/main/res/layout/fragment_followers_page.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/followers_item" />
+        tools:listitem="@layout/item_followers" />
 
     <TextView
         android:id="@+id/textView"
