--- a/app/src/main/res/layout/item_party.xml
+++ b/app/src/main/res/layout/item_party.xml
@@ -103,6 +103,8 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
