--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,6 +15,7 @@
     <color name="items_color">#2F2F2F</color>
     <color name="items_color_alpha">#7A2F2F2F</color>
     <color name="stroke_color">#3E3E3E</color>
+    <color name="shimmer_color">#484848</color>
 
     <color name="pressed_secondary_button_color">#323232</color>
 
