Изменение логики добавления в избранное и подписки на организатора

--- a/app/src/main/res/layout/activity_party.xml
+++ b/app/src/main/res/layout/activity_party.xml
@@ -113,7 +113,7 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/favorite"
+            android:id="@+id/star"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
