--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
     <color name="transparent">#00FFFFFF</color>
 
     <color name="yellow">#E8A636</color>
+    <color name="red">#E84736</color>
 </resources>
