--- a/app/src/main/res/layout/item_current_user_party.xml
+++ b/app/src/main/res/layout/item_current_user_party.xml
@@ -5,79 +5,87 @@
     android:layout_height="wrap_content"
     android:layout_marginVertical="5dp"
     android:layout_marginHorizontal="10dp"
-    android:id="@+id/content"
     android:background="@drawable/button_secondary_color_selector">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/camera"
-        android:scaleType="center"
-        android:background="@color/stroke_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/content">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/linearLayoutCompat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        app:layout_constraintStart_toEndOf="@+id/image"
-        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@color/stroke_color"
+            android:scaleType="center"
+            android:src="@drawable/camera"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/name"
-            style="@style/text_bold_16_style"
-            android:textColor="@color/main_text_color"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/linearLayoutCompat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="Новый год" />
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            app:layout_constraintStart_toEndOf="@+id/image"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/name"
+                style="@style/text_bold_16_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:text="Новый год"
+                android:textColor="@color/main_text_color" />
+
+            <TextView
+                android:id="@+id/price"
+                style="@style/text_medium_16_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:text="от 160 ₽"
+                android:textColor="@color/main_color" />
+
+            <TextView
+                android:id="@+id/place"
+                style="@style/text_medium_12_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ангар"
+                android:textColor="@color/hint_color" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <TextView
-            android:id="@+id/price"
-            style="@style/text_medium_16_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="от 160 ₽"
-            android:textColor="@color/main_color" />
-
-        <TextView
-            android:id="@+id/place"
+            android:id="@+id/date"
             style="@style/text_medium_12_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ангар"
-            android:textColor="@color/hint_color" />
+            android:layout_margin="10dp"
+            android:text="1 февраля, 19:00"
+            android:textColor="@color/hint_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        <TextView
+            android:id="@+id/age"
+            style="@style/text_medium_12_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="+14"
+            android:textColor="@color/hint_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat" />
 
-    <TextView
-        android:id="@+id/date"
-        style="@style/text_medium_12_style"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1 февраля, 19:00"
-        android:textColor="@color/hint_color"
-        android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/age"
-        style="@style/text_medium_12_style"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="+14"
-        android:textColor="@color/hint_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <ImageButton
         android:id="@+id/buttonRe"
@@ -94,12 +102,11 @@
         style="@style/text_medium_12_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="На проверке"
         android:visibility="gone"
         android:textColor="@color/yellow"
         app:layout_constraintEnd_toEndOf="@+id/buttonRe"
         app:layout_constraintTop_toBottomOf="@+id/buttonRe" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
